--- a/src/styles/components/image.scss
+++ b/src/styles/components/image.scss
@@ -1,19 +1,169 @@
-.bimage {
-    background-image: url('./../img/cherry.jpg');
+
+.bimage4 {
+    background-image: url('./../img/maxresdefault.jpg');
+    background-size: cover;
+    height: 1000px;
+
+        
+}
+.bimage5 {
+    background-image: url('./../img/landscape2.jpg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage6 {
+    background-image: url('./../img/fall-autumn-red-season.jpg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage7 {
+    background-image: url('./../img/1.jpg');
     background-size: cover;
     height: 1000px;
         
 }
 
-.bimage1 {
-    background-image: url('./../img/kamikochi.jpg');
+.bimage8 {
+    background-image: url('./../img/2.jpg');
     background-size: cover;
     height: 1000px;
         
 }
 
-.bimage2 {
-    background-image: url('./../img/kamikochi2.jpg');
+.bimage9 {
+    background-image: url('./../img/3.jpg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage10 {
+    background-image: url('./../img/4.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage11 {
+    background-image: url('./../img/5.jpg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage12 {
+    background-image: url('./../img/6.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage13 {
+    background-image: url('./../img/7.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+
+.bimage14 {
+    background-image: url('./../img/8.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+
+.bimage15 {
+    background-image: url('./../img/9.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage16 {
+    background-image: url('./../img/10.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage17 {
+    background-image: url('./../img/11.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage18 {
+    background-image: url('./../img/12.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage19 {
+    background-image: url('./../img/13.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+
+.bimage20 {
+    background-image: url('./../img/14.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+
+.bimage21 {
+    background-image: url('./../img/15.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage22 {
+    background-image: url('./../img/16.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage23 {
+    background-image: url('./../img/17.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage24 {
+    background-image: url('./../img/maxresdefault.jpg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage25 {
+    background-image: url('./../img/Germany/1.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage26 {
+    background-image: url('./../img/Germany/2.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage27 {
+    background-image: url('./../img/Germany/3.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage28 {
+    background-image: url('./../img/Germany/4.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage29 {
+    background-image: url('./../img/18.jpeg');
+    background-size: cover;
+    height: 1000px;
+        
+}
+.bimage30 {
+    background-image: url('./../img/19.jpg');
     background-size: cover;
     height: 1000px;
         
