--- a/src/styles/components/button1.scss
+++ b/src/styles/components/button1.scss
@@ -1,39 +1,16 @@
 @import '../variables';
 
-.gradient {
-    color: #fff;
-    text-shadow: -2px 2px #346392;
-    background-color: $sky;
-    transition: all .8s;
-    background-blend-mode: color-dodge;
-   
-    
-  }
-
-  .gradient:hover {
-    background-color: #fff;
-    transition: all .8s;
-    border-radius: 15px;
-    color: $sky;
-  }
+@media screen
+and (min-width:10px)
+and (max-width: 600px){
   
-  .gradient:active {
-    box-shadow: inset 0 0 0 1px #E97B10,inset 0 5px 30px #193047;
-  }
-
-
-  button {
-    display: inline-block;
-    margin: 0 10px 0 0;
-    padding: 15px 45px;
-    font-size: 48px;
-    font-family: "Bitter",serif;
-    line-height: 1.8;
-    appearance: none;
-    box-shadow: none;
-    border-radius: 0;
-  }
-  
-  button:focus {
-    outline: none
-  }
+}
+@media screen
+and (min-width:601px)
+and (max-width: 1198px){
+ 
+}
+@media screen
+and (min-width:1199px)
+and (max-width: 2000px){
+}
