updated for hosting

--- a/src/styles/components/image.scss
+++ b/src/styles/components/image.scss
@@ -1,25 +1,25 @@
 
 .bimage4 {
-    background-image: url('./../img/maxresdefault.jpg');
+    background-image: url('./../img/maxresdefault2.jpg');
     background-size: cover;
     height: 1000px;
 
         
 }
 .bimage5 {
-    background-image: url('./../img/landscape2.jpg');
+    background-image: url('./../img/10.jpeg');
     background-size: cover;
     height: 1000px;
         
 }
 .bimage6 {
-    background-image: url('./../img/fall-autumn-red-season.jpg');
+    background-image: url('./../img/10.jpeg');
     background-size: cover;
     height: 1000px;
         
 }
 .bimage7 {
-    background-image: url('./../img/1.jpg');
+    background-image: url('./../img/10.jpeg');
     background-size: cover;
     height: 1000px;
         
@@ -127,7 +127,7 @@
         
 }
 .bimage24 {
-    background-image: url('./../img/maxresdefault.jpg');
+    background-image: url('./../img/10.jpg');
     background-size: cover;
     height: 1000px;
         
