--- a/src/styles/components/image.scss
+++ b/src/styles/components/image.scss
@@ -127,7 +127,7 @@
         
 }
 .bimage24 {
-    background-image: url('./../img/10.jpg');
+    background-image: url('./../img/10.jpeg');
     background-size: cover;
     height: 1000px;
         
